--- a/index.html
+++ b/index.html
@@ -3,36 +3,53 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>WIN GO — Mobile Friendly</title>
+<title>Win Go 1 Minute — Hacking Simulator</title>
 <style>
+  :root {
+    --neon-green:#00ff99;
+    --neon-cyan:#00e5ff;
+    --danger:#ff003c;
+    --dark-bg:#0f2027;
+  }
+
   body {
     margin:0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+    background:#000;
+    color:#fff;
     display:flex;
     justify-content:center;
     align-items:center;
     height:100vh;
-    color:#fff;
+    overflow:hidden;
   }
 
-  .card{
-    background: rgba(255,255,255,0.05);
-    backdrop-filter: blur(10px);
-    border-radius:18px;
-    padding:30px 24px;
-    max-width:380px;
-    width:90%;
-    text-align:center;
-    box-shadow: 0 10px 30px rgba(0,0,0,0.5);
-    position: relative;
+  canvas#matrix {
+    position: fixed;
+    top: 0;left: 0;
+    width: 100%;height: 100%;
+    z-index: -1;
+    background: black;
   }
 
-  h1{
+  .card {
+    background: rgba(0,0,0,0.6);
+    border: 1px solid var(--neon-green);
+    border-radius: 16px;
+    padding: 25px 20px;
+    max-width: 380px;
+    width: 90%;
+    text-align: center;
+    box-shadow: 0 0 20px var(--neon-green);
+  }
+
+  .game-title{
     font-size:22px;
-    margin-bottom:18px;
-    color:#ffd166;
-    text-shadow:0 0 10px rgba(255,209,102,0.5);
+    font-weight:900;
+    text-align:center;
+    margin-bottom:15px;
+    color:var(--neon-cyan);
+    text-shadow:0 0 8px rgba(0,229,255,0.7);
   }
 
   input[type="text"]{
@@ -42,14 +59,15 @@
     border:none;
     outline:none;
     font-size:16px;
-    margin-bottom:18px;
+    margin-bottom:14px;
     text-align:center;
-    background: rgba(255,255,255,0.1);
+    background: rgba(255,255,255,0.08);
     color:#fff;
     transition: 0.2s all;
   }
   input[type="text"]:focus{
     background: rgba(255,255,255,0.15);
+    box-shadow:0 0 10px var(--neon-cyan);
   }
 
   button{
@@ -57,22 +75,23 @@
     padding:14px;
     border-radius:12px;
     border:none;
-    background: linear-gradient(135deg,#06d6a0,#1b9aaa);
-    color:#fff;
+    background: linear-gradient(135deg,var(--neon-green),var(--neon-cyan));
+    color:#000;
     font-weight:700;
     font-size:16px;
     cursor:pointer;
     transition: 0.2s all;
   }
   button:hover{
-    transform: scale(1.03);
+    transform: scale(1.05);
+    box-shadow:0 0 10px var(--neon-green);
   }
 
   #result{
     margin-top:20px;
     padding:14px;
     border-radius:12px;
-    background: rgba(255,255,255,0.08);
+    background: rgba(255,255,255,0.05);
     min-height:50px;
     font-weight:700;
     font-size:18px;
@@ -82,48 +101,105 @@
     color:#fff;
   }
 
-  /* Spacing for color span */
-  #result span{
-    margin-left:10px;
-  }
+  #result span{ margin-left:10px; }
 
   .red{color:#ff4d4d;}
   .green{color:#06d6a0;}
   .small{background: rgba(255,255,255,0.05);}
   .big{background: rgba(255,255,255,0.12);}
-  .processing{
-    font-style: italic;
-    opacity:0.7;
-  }
+  .processing{font-style: italic;opacity:0.7;}
+
+  /* Scan bar */
+  .scanWrap{margin-top:18px;position:relative;}
+  .scan{height:16px;border-radius:8px;background:#111;overflow:hidden;position:relative;border:1px solid rgba(0,255,170,0.4)}
+  .scan .bar{height:100%;width:0%;background:linear-gradient(90deg,var(--danger),var(--neon-green));transition:width .15s linear}
+  .scan-percent{text-align:right;font-size:13px;margin-top:4px;color:var(--neon-green);font-weight:700}
 
   @media (max-width:420px){
-    h1{ font-size:20px; }
-    input[type="text"]{ font-size:15px; padding:12px; }
-    button{ font-size:15px; padding:12px; }
-    #result{ font-size:16px; padding:12px; }
+    .game-title{font-size:20px;}
+    input[type="text"]{ font-size:15px; padding:12px;}
+    button{ font-size:15px; padding:12px;}
+    #result{ font-size:16px; padding:12px;}
   }
 </style>
 </head>
 <body>
+<canvas id="matrix"></canvas>
+
 <div class="card">
-  <h1>WIN GO 1 MINUTE</h1>
+  <h2 class="game-title">Win Go 1 Minute</h2>
   <form id="calcForm" autocomplete="off">
     <input type="text" id="numbersInput" maxlength="3" placeholder="Enter 3 digits" required inputmode="numeric">
-    <button type="submit">Continue</button>
+    <button type="submit">LAUNCH</button>
   </form>
-  <div id="result">Enter numbers and click Continue</div>
+
+  <!-- Progress bar -->
+  <div class="scanWrap">
+    <div class="scan">
+      <div id="scanBar" class="bar"></div>
+    </div>
+    <div id="scanPercent" class="scan-percent">0%</div>
+  </div>
+
+  <div id="result">Enter numbers and click LAUNCH</div>
 </div>
 
 <script>
+// Matrix animation
+const canvas = document.getElementById("matrix");
+const ctx = canvas.getContext("2d");
+canvas.height = window.innerHeight;
+canvas.width = window.innerWidth;
+const letters = "01".split("");
+const fontSize = 14;
+const columns = canvas.width / fontSize;
+const drops = [];
+for (let x = 0; x < columns; x++) drops[x] = 1;
+function draw() {
+  ctx.fillStyle = "rgba(0, 0, 0, 0.05)";
+  ctx.fillRect(0, 0, canvas.width, canvas.height);
+  ctx.fillStyle = "#00ff99";
+  ctx.font = fontSize + "px monospace";
+  for (let i = 0; i < drops.length; i++) {
+    const text = letters[Math.floor(Math.random() * letters.length)];
+    ctx.fillText(text, i * fontSize, drops[i] * fontSize);
+    if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) drops[i] = 0;
+    drops[i]++;
+  }
+}
+setInterval(draw, 33);
+
+// Helpers
+function sleep(ms){return new Promise(r=>setTimeout(r,ms));}
+function rand(min,max){return Math.floor(Math.random()*(max-min+1))+min;}
+
+// Scan animation
+async function runScan(){
+  const scanBar=document.getElementById("scanBar");
+  const percentEl=document.getElementById("scanPercent");
+  let cur=0;
+  while(cur<100){
+    cur+=rand(5,12);
+    if(cur>100)cur=100;
+    scanBar.style.width=cur+'%';
+    percentEl.textContent=cur+'%';
+    await sleep(120);
+  }
+  await sleep(300);
+  scanBar.style.width='0%';
+  percentEl.textContent='0%';
+}
+
+// Form logic
 const form = document.getElementById("calcForm");
 const input = document.getElementById("numbersInput");
 const resultBox = document.getElementById("result");
 
 input.addEventListener("input",(e)=>{
-  e.target.value=e.target.value.replace(/\D/g,'').slice(0,3);
+  e.target.value=e.target.value.replace(/\\D/g,'').slice(0,3);
 });
 
-form.addEventListener("submit",(e)=>{
+form.addEventListener("submit",async(e)=>{
   e.preventDefault();
   const val = input.value.trim();
   if(!/^[0-9]{3}$/.test(val)){
@@ -131,21 +207,19 @@ form.addEventListener("submit",(e)=>{
     return;
   }
 
-  // Show processing
   resultBox.textContent="Processing...";
   resultBox.className="processing";
+  await runScan();
 
-  setTimeout(()=>{
-    const [n1,n2,n3]=val.split('').map(Number);
-    const total=(n1+n2)-n3;
-    const colorClass=(total%2===0)?"red":"green";
-    const colorText=(total%2===0)?"RED":"GREEN";
-    const sizeClass=(n3<=4)?"small":"big";
-    const sizeText=(n3<=4)?"SMALL":"BIG";
+  const [n1,n2,n3]=val.split('').map(Number);
+  const total=(n1+n2)-n3;
+  const colorClass=(total%2===0)?"red":"green";
+  const colorText=(total%2===0)?"RED":"GREEN";
+  const sizeClass=(n3<=4)?"small":"big";
+  const sizeText=(n3<=4)?"SMALL":"BIG";
 
-    resultBox.innerHTML=`${sizeText} <span class="${colorClass}">${colorText}</span>`;
-    resultBox.className=`${sizeClass} ${colorClass}`;
-  },1000); // 1 sec delay
+  resultBox.innerHTML=`${sizeText} <span class=\"${colorClass}\">${colorText}</span>`;
+  resultBox.className=`${sizeClass} ${colorClass}`;
 });
 </script>
 </body>
